# chinese-shadowing

./: .gitignore  README.md  requirements.txt  setup.cfg
chinese_shadowing/: __main__.py  config.py  play_audio.py  plot.py  preprocessing.py  record_audio.py  renaming.py  utilities.py
data/: notes.csv
