[metadata]
name = chinese-shadowing
version = 1.0.0
description = Application for chinese shadowing.
author = Thomas Hirtz
url = https://github.com/thomashirtz/chinese-shadowing

[options]
install_requires =
    numpy
    matplotlib
    pandas
    pydub
    pyaudio

[options.entry_points]
console_scripts =
    chinese-shadowing = chinese_shadowing.__main__:main
